# ulurin

./: .gitignore  .vercelignore  Cargo.toml  DEPLOYMENTS.md  README.id.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: actions.ts  globals.css  layout.tsx  manifest.ts  page.tsx  twitter-image.alt.txt
components/: I18nProvider.tsx
contracts/bagibagi-campaign/: Cargo.toml
contracts/bagibagi-campaign/src/: lib.rs  test.rs
contracts/bagibagi-campaign/test_snapshots/test/: donation_split_and_allowance_release.1.json  tier_caps_allowance.1.json
contracts/ulurin-vault/: Cargo.toml
contracts/ulurin-vault/src/: lib.rs  test.rs
contracts/ulurin-vault/test_snapshots/test/: a_stranger_cannot_pose_as_the_organizer_to_upload_proof.1.json  a_stranger_cannot_take_the_beneficiary_share.1.json  beneficiary_is_paid_without_waiting_for_proof.1.json  ceiling_shrinks_when_the_platform_fee_grows.1.json  donation_splits_three_ways_and_creator_waits_for_proof.1.json  donations_accumulate_across_donors.1.json  every_tier_plus_platform_fee_stays_within_the_cap.1.json  every_unit_is_accounted_for_and_rounding_favours_the_beneficiary.1.json  nobody_can_overdraw_any_balance.1.json  platform_can_collect_its_accrued_fee.1.json  platform_fee_is_snapshotted_at_creation.1.json  the_binding_limit_is_reported_honestly.1.json  tier_above_the_ladder_is_rejected.1.json  tier_caps_the_creator_reward.1.json  total_financing_cap_blocks_creation_before_any_money_moves.1.json  zero_and_negative_amounts_are_rejected.1.json
docs/: DECISIONS.md  KONSEP.en.md  KONSEP.md  PRODUCT-BRIEF.md  USE-CASES.en.md  USE-CASES.md
public/: sw.js
scripts/: deploy-testnet.sh  provision-testnet-env.sh
(+124 files in other folders)
