[package]
name = "bagibagi-campaign"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
ed25519-dalek = "=2.2.0"
soroban-sdk = { workspace = true, features = ["testutils"] }
